# Fraymakers-Entity-Statistics

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  entityDataExtractor.cpp  enum-definitions.h  main.cpp  main.h  makefile  program  program.cpp  program.h  stat-tracker.h  struct-definitions.h
headers/: entity-data-extractor.h  enum-definitions.h  extractor.h  program.h  stat-tracker.h  struct-definitions.h
